--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: first_app
-description: A new Flutter project.
+name: Quiz_App
+description: simple app that asks you dumb questions
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
